tests/errors/3_definition_errors/undefined-variable-5.java
class Main {
	static int a;
    static void run() {}
    static int brun() {
        return b; // returning undeclared variable
    }
}
